--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.6.0",
+    "async--await": "^1.0.2",
+    "asyncawait": "^1.0.6",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -14,6 +17,8 @@
     "mongodb": "^2.2.33",
     "mongoose": "^5.0.3",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "nodemailer": "^4.4.2",
+    "serve-favicon": "~2.4.5",
+    "sha256": "^0.2.0"
   }
 }
